smart squares